new writable coder and changes in postgresit to use my local host